2004-11-19 Alain Magloire
	Protect agains possible NPE.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/RegisterManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/SourceManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/VariableDescriptor.java

2004-11-19 Alain Magloire
	Use the qualified name when creating a register.
	Destroy the corresponding gdb variable on register's disposal.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/RegisterManager.java
	
	Added the "dispose" method.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Register.java

2004-11-19 Alain Magloire
	RegisterManager.findRegister() was not implemented correctly
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/RegisterManager.java

2004-11-19 Alain Magloire
	No need for stackframe when creating the Type class,
	but rather use the target in the constructor.

2004-11-19 Alain Magloire
	Fix for 78816
	* src/org/eclipse/cdt/debug/mi/core/MIPlugin.java

2004-11-19 Alain Magloire

	Clear the confusion about sublist of stackframes.
	PR 78611

	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Thread.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/VariableManager.java

2004-11-17 David Inglis
	
	ICDIDebugger change to use IBinaryObject instead of IBnaryExecutable
	
	* stc/org/eclipse/cdt/debug/mi/core/GDBCDIDebugger.java
	
2004-11-17 Alain Magloire
	Fix for 78816
	* mi/org/eclipse/cdt/debug/mi/core/MIInferior.java

2004-11-16 Alain Magloire
	Optimize things by providing a new method
	ICDIRegisterGroup.hasRegisters();
	* cdi/org/eclipse/cdt/debug/core/cdi/model/RegisterGroup.java

2004-11-16 Alain Magloire
	Remove some warnings and use the new Launch key
	to decide whether or not to use pseudo tty.
	* mi/org/eclipse/cdt/debug/mi/core/TxThread.java
	* mi/org/eclipse/cdt/debug/mi/core/command/RawCommand.java
	* src/org/eclipse/cdt/debug/mi/core/MIPlugin.java

2004-11-16 Alain Magloire
	NPE when watchpoints are set in the gdb console.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/BreakpointManager.java

2004-11-16 Alain Magloire